docker_file/komposefiles/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8000
  selector:
    io.kompose.service: fastapi
status:
  loadBalancer: {}
